# desergen

./: .ignore  Cargo.toml  README.md  flake.nix
desergen/: Cargo.toml  justfile
desergen/example/: desergen.toml
desergen/example/desergen/schemas/: exampleClass.ron  exampleClass2.ron  exampleClass3.ron  exampleEnum.ron
desergen/src/: config.rs  generator.rs  main.rs  schema.rs
desergen/src/generator/: enum_.rs  str.rs
desergen/src/schema/: file.rs  info.rs  module_path.rs  raw.rs  registry.rs  validation_info.rs
desergen/src/schema/file/: raw.rs
desergen/src/schema/info/: raw.rs
desergen/src/schema/validation_info/: raw.rs
macros/: Cargo.toml
